--- a/Makefile.options
+++ b/Makefile.options
@@ -6,7 +6,7 @@
 PROJECT_NAME := mb
 
 # Source files for the server
-SERVER_FILES := $(wildcard *.eliomi *.eliom) db.ml
+SERVER_FILES := db.ml $(wildcard *.eliomi *.eliom)
 # Source files for the client
 CLIENT_FILES := $(wildcard *.eliomi *.eliom)
 
